# monads-rs

./: Cargo.toml  README.md  rustfmt.toml
benches/: logging_benchmark.rs  option_benchmark.rs  state_benchmark.rs
codegen/: Cargo.toml
codegen/src/: blocks.rs  exprs.rs  lib.rs  locals.rs  loops.rs
codegen/src/syntax_error/: mod.rs  unhandled_bind.rs
codegen/src/syntax_errors/: early_return.rs  mod.rs  unhandled_binds.rs
examples/: generator.rs  logging.rs  logging_expanded.rs  option.rs  option_expanded.rs  probability.rs  state.rs  state_expanded.rs
macro_test_cases/: early_return_fail.rs  early_return_fail.stderr
src/: control_flow.rs  lib.rs  logging.rs  loops.rs  option.rs  probability.rs  result.rs  state.rs  vec.rs
tests/: early_return.rs  early_return_error.rs  early_return_expanded_with.rs  if_statements.rs  local_monadic_bind.rs  loops.rs
