[workspace]
members = ["codegen"]

[package]
name = "monads-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", optional = true }

[dependencies.monads-rs-codegen]
version = "0.1.0"
path = "codegen"

[features]
default = ["logging", "probability", "state"]
logging = []
probability = ["dep:rand"]
state = []
